k3s_cluster/base/private/monitor/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: private
  labels:
    app: private-monitor-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-monitor-grafana
  template:
    metadata:
      labels:
        app: private-monitor-grafana
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      securityContext:
        fsGroup: 0
      serviceAccountName: sa
      containers:
        - name: grafana
          image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            capabilities:
              add:
                - CHOWN
          volumeMounts:
            - name: data
              mountPath: /var/lib/grafana
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
