k3s_cluster/base/private/monitor/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-monitor-grafana
spec:
  type: ClusterIP
  selector:
    app: private-monitor-grafana
  ports:
    - name: web
      protocol: TCP
      port: 4421
      targetPort: 3000
