k3s_cluster/base/private/monitor/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-monitor-grafana
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.monitor.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-monitor-grafana-service
          port: 4421
          # tls: {}
